--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "mongoose": "^8.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
